fixed minor things on mobile

--- a/src/css/project.less
+++ b/src/css/project.less
@@ -20,12 +20,13 @@
 
 .outer {
 	max-width: 100%;
+	margin: 0;
 }
 
 .head-image {
 	width: 100%;
-	@media @mobile {
-		padding-top: 25px;
+	@media @tablet {
+		padding-top: 40px;
 	}
 }
 
@@ -95,6 +96,9 @@
 .middle {
 	padding-top: 45px;
 	padding-bottom: 20px;
+	@media @tablet {
+		padding-top: 0px;
+	}
 }
 
 .line {
